# ipod

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pip-build-lint-test-coverage.yml
ipod/: __init__.py  ipod.py  main.py  merge.py  utils.py
ipod/tests/: test_main.py  test_utils.py
