[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ipod"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    { name = "Kathleen Kiker", email = "kathleen@b612foundation.org" },
    { name = "Alec Koumjian", email = "alec@b612foundation.org" },
    { name = "Joachim Moeyens", email = "moeyensj@uw.edu" },
    { name = "Spencer Nelson", email = "spencer@b612foundation.org" },
    { name = "Nate Tellis", email = "nate@b612foundation.org" },
]
description = "Iterative precovery and differential correction of asteroid orbits"
readme = "README.md"
license = { file = "LICENSE.md", classifier = "BSD License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "pyarrow>=14.0.0",
    "ray[default]",
    "thor @ git+https://github.com/moeyensj/thor.git@857b808be575323b5954f67ea304149f27b7ef2c#egg=thor",
    "precovery @ git+https://github.com/B612-Asteroid-Institute/precovery.git@22fdd7f67bccc36d80ac35f52e83bc05b76ac31e#egg=precovery",
    "quivr>=0.7.3a1",
]

[project.optional-dependencies]
tests = [
    "pre-commit",
    "pytest",
    "black",
    "isort",
    "pytest-cov",
    "pytest-benchmark",
]

[project.urls]
"Homepage" = "https://github.com/b612-Asteroid-Institute/ipod"

[tool.setuptools_scm]
version_file = "ipod/version.py"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
python_functions = "test_*"

[tool.black]
# Comfortable distance, but makes exceptions when appropriate.
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110
ignore = ["W503", "E203"]
exclude = ["build", "ipod/version.py"]

[tool.pytest]
filterwarnings = "ignore::DeprecationWarning:astropy"
