[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ipod"
requires-python = "<3.13,>=3.11"
dynamic = ["version"]
authors = [
    { name = "Kathleen Kiker", email = "kathleen@b612foundation.org" },
    { name = "Alec Koumjian", email = "alec@b612foundation.org" },
    { name = "Joachim Moeyens", email = "moeyensj@uw.edu" },
    { name = "Spencer Nelson", email = "spencer@b612foundation.org" },
    { name = "Nate Tellis", email = "nate@b612foundation.org" },
]
description = "Iterative precovery and differential correction of asteroid orbits"
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "adam-assist>=0.2.0",
    "numpy",
    "adam_core>=0.3.0",
    "numba>=0.60.0",
    "pyarrow>=14.0.0",
    "ray[default]",
    "thor @ git+https://github.com/moeyensj/thor.git@597f246f540151852c653dda5ebcae8537825415#egg=thor",
    "precovery @ git+https://github.com/B612-Asteroid-Institute/precovery.git@186861a987fa053f9e03f77b3f469bb3c1311165#egg=precovery",
    "quivr>=0.7.3a1",
]

[dependency-groups]
test = [
    "pre-commit",
    "pytest",
    "black",
    "isort",
    "ruff",
    "mypy",
    "pytest-cov",
    "pytest-benchmark",
]

[project.urls]
"Homepage" = "https://github.com/b612-Asteroid-Institute/ipod"

[tool.pdm.version]
source = "scm"
write_to = "ipod/_version.py"
write_template = "__version__ = '{}'"

[tool.pytest.ini_options]
python_functions = "test_*"


[tool.pdm.scripts]
check = { composite = ["lint", "typecheck"] }
format = { composite = ["black ./ipod", "isort ./ipod"] }
lint = { composite = [
  "ruff check ./ipod",
  "black --check ./ipod",
  "isort --check-only ./ipod",
] }
fix = "ruff ./ipod --fix"
typecheck = "mypy ./ipod"

test = "pytest --benchmark-disable --ignore=__pypackages__ {args}"
doctest = "pytest --ignore=__pypackages__ --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only --ignore=__pypackages__"
coverage = "pytest --cov=ipod --cov-report=xml --ignore=__pypackages__"

[tool.pdm]
distribution = true

[tool.black]
# Comfortable distance, but makes exceptions when appropriate.
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110
ignore = ["W503", "E203"]
exclude = ["build", "ipod/version.py"]

[tool.pytest]
filterwarnings = "ignore::DeprecationWarning:astropy"
